--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,9 @@ accompanistSystemuicontroller = "0.30.1"
 agp = "8.7.3"
 appcompat = "1.7.0"
 coilCompose = "2.4.0"
-coilKtCoilCompose = "2.2.2"
-coreKtxVersion = "1.12.0"
+coilComposeVersion = "2.1.0"
+coilKtCoilCompose = "2.4.0"
+coreKtxVersion = "1.15.0"
 firebaseBom = "33.7.0"
 firebaseBomVersion = "33.7.0"
 foundationLayout = "1.7.6"
@@ -35,6 +36,7 @@ androidx-foundation-layout = { module = "androidx.compose.foundation:foundation-
 androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
 androidx-navigation-compose-v273 = { module = "androidx.navigation:navigation-compose", version.ref = "navigationComposeVersion" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+coil-compose-v210 = { module = "io.coil-kt:coil-compose", version.ref = "coilComposeVersion" }
 coil-compose-v222 = { module = "io.coil-kt:coil-compose", version.ref = "coilKtCoilCompose" }
 com-google-firebase-firebase-firestore-ktx = { module = "com.google.firebase:firebase-firestore-ktx" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
